--- a/CS106_A2_Project/admincovidtestreport.ui
+++ b/CS106_A2_Project/admincovidtestreport.ui
@@ -156,7 +156,7 @@
     <string>Test result :</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="signinbutton">
+  <widget class="QPushButton" name="submitCovidreport">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -235,7 +235,7 @@ color: rgb(255, 255, 255);</string>
   <zorder>positive</zorder>
   <zorder>negative</zorder>
   <zorder>label_2</zorder>
-  <zorder>signinbutton</zorder>
+  <zorder>submitCovidreport</zorder>
   <zorder>backbutton</zorder>
  </widget>
  <resources/>
